# Lockerr

./: .air.toml  .gitignore  Dockerfile  LICENSE  Makefile  README.md  go.mod  go.sum  main.go  pyproject.toml
.github/workflows/: go.yml
cmd/lockerr/: main.go
internal/commands/: cmd_ping.go  command_handler.go  commands.go  context.go  lock.go  mw_permissions.go  unlock.go
internal/events/: message.go  ready.go  voice_state_update.go
internal/middleware/: permissions.go
internal/storage/: storage.go
lockerr/: __main__.py  events.py  permissions.py  statics.py  utils.py
lockerr/cogs/: general.py  locking.py
src/: lockerr.go
